--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -22,11 +22,11 @@
   }
 
   ._edumy_section_gap {
-    @apply mt-[100px];
+    @apply mt-11 sm:mt-14 lg:mt-[100px];
   }
 
   ._edumy_section_title {
-    @apply text-5xl leading-[58px] text-dark font-bold underline decoration-dark;
+    @apply text-3xl md:text-4xl leading-snug lg:text-5xl lg:leading-[58px] text-dark font-bold underline decoration-dark;
   }
 
   ._edumy_section_title > span {
@@ -34,7 +34,7 @@
   }
 
   ._edumy_slider_btn {
-    @apply w-14 h-14 rounded-full border-2 border-primary bg-transparent  inline-flex justify-center items-center;
+    @apply w-10 h-10 lg:w-14 lg:h-14 rounded-full border-2 border-primary bg-transparent  inline-flex justify-center items-center;
   }
 
   ._edumy_slider_btn * {
@@ -56,7 +56,7 @@
 
   /* Services Section */
   ._edumy_services_card {
-    @apply flex items-center gap-x-4 relative px-7 py-38px rounded-10px before:absolute before:block before:inset-0 before:rounded-10px before:-z-1 before:opacity-10;
+    @apply flex items-center gap-x-4 relative p-5 md:px-7 md:py-38px rounded-10px before:absolute before:block before:inset-0 before:rounded-10px before:-z-1 before:opacity-10;
   }
 
   /* Edumy Course Card */
@@ -72,11 +72,11 @@
     @apply text-gray text-sm font-normal decoration-gray flex items-center gap-x-2;
   }
   ._edumy_course_card_title {
-    @apply text-dark font-semibold text-2xl leading-8 decoration-dark capitalize;
+    @apply text-dark font-semibold text-22px sm:text-2xl leading-8 decoration-dark capitalize;
   }
 
   ._edumy_course_card_price {
-    @apply text-dark text-2xl font-bold leading-8;
+    @apply text-dark text-xl sm:text-2xl font-bold leading-8;
   }
 
   ._edumy_course_card_btn {
@@ -87,9 +87,9 @@
     @apply text-white !fill-white;
   }
 
-  /* Edumy Feature Section */
+  /* Feature Section */
   ._edumy_feature_card {
-    @apply relative before:absolute before:block before:w-px before:h-[153px] before:bg-[#EAEAEA] before:-left-12 before:top-1/2 before:-translate-y-1/2 [&:nth-child(3n+1)]:before:content-none;
+    @apply relative before:absolute before:hidden md:before:block before:w-px before:h-[153px] before:bg-[#EAEAEA] before:-left-8 xl:before:-left-12 before:top-1/2 before:-translate-y-1/2 [&:nth-child(2n+1)]:before:content-none lg:[&:nth-child(3n+1)]:before:content-none;
   }
 
   ._edumy_feature_card_title {
@@ -99,7 +99,7 @@
   /* Testimonial Section */
 
   ._edumy_slider_pagination > * {
-    @apply w-10 h-2 bg-[#D8F0E1] rounded-full duration-300 cursor-pointer !opacity-100;
+    @apply w-8 sm:w-10 h-2 bg-[#D8F0E1] rounded-full duration-300 cursor-pointer !opacity-100;
   }
 
   ._edumy_slider_pagination > .swiper-pagination-bullet-active {
