--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -1008,6 +1008,10 @@ input:focus {
   right: -2.5rem;
 }
 
+.-top-1 {
+  top: -0.25rem;
+}
+
 .bottom-4 {
   bottom: 1rem;
 }
@@ -1018,6 +1022,10 @@ input:focus {
 
 .left-0 {
   left: 0px;
+}
+
+.left-\[5px\] {
+  left: 5px;
 }
 
 .right-15px {
@@ -1040,14 +1048,6 @@ input:focus {
   top: 50%;
 }
 
-.top-50px {
-  top: 50px;
-}
-
-.top-\[350px\] {
-  top: 350px;
-}
-
 .top-3 {
   top: 0.75rem;
 }
@@ -1056,20 +1056,12 @@ input:focus {
   top: 0.875rem;
 }
 
-.bottom-0 {
-  bottom: 0px;
+.top-50px {
+  top: 50px;
 }
 
-.top-0 {
-  top: 0px;
-}
-
-.-top-1 {
-  top: -0.25rem;
-}
-
-.left-\[5px\] {
-  left: 5px;
+.top-\[350px\] {
+  top: 350px;
 }
 
 .z-40 {
@@ -1167,10 +1159,6 @@ input:focus {
   margin-top: 15px;
 }
 
-.mt-2 {
-  margin-top: 0.5rem;
-}
-
 .mt-25px {
   margin-top: 25px;
 }
@@ -1245,10 +1233,6 @@ input:focus {
 
 .h-screen {
   height: 100vh;
-}
-
-.h-0 {
-  height: 0px;
 }
 
 .w-0 {
@@ -1632,6 +1616,10 @@ input:focus {
   padding: 7px;
 }
 
+.p-1 {
+  padding: 0.25rem;
+}
+
 .px-1 {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
@@ -1892,16 +1880,6 @@ input:focus {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.grayscale-0 {
-  --tw-grayscale: grayscale(0);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
-.grayscale-\[60\] {
-  --tw-grayscale: grayscale(60);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
 .duration-300 {
   transition-duration: 300ms;
 }
@@ -2020,6 +1998,48 @@ input:focus {
   content: var(--tw-content);
   --tw-bg-opacity: 1;
   background-color: rgb(243 67 52 / var(--tw-bg-opacity));
+}
+
+.before\:bg-\[\#E32263\]::before {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(227 34 99 / var(--tw-bg-opacity));
+}
+
+.before\:bg-\[\#9A2AB0\]::before {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(154 42 176 / var(--tw-bg-opacity));
+}
+
+.before\:bg-\[\#693BB7\]::before {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(105 59 183 / var(--tw-bg-opacity));
+}
+
+.before\:bg-\[\#00978B\]::before {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 151 139 / var(--tw-bg-opacity));
+}
+
+.before\:bg-\[\#4BB04E\]::before {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 176 78 / var(--tw-bg-opacity));
+}
+
+.before\:bg-\[\#8BC24D\]::before {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(139 194 77 / var(--tw-bg-opacity));
+}
+
+.before\:bg-\[\#C5DC39\]::before {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(197 220 57 / var(--tw-bg-opacity));
 }
 
 .last\:mb-0:last-child {
